fixed snow overlapping with cta

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -114,7 +114,7 @@
 	background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'),
   url('http://www.wearewebstars.dk/codepen/img//s2.png'),
   url('http://www.wearewebstars.dk/codepen/img//s3.png');
-	height: 75%;
+	height: 510px;
 	left: 0;
 	position: absolute;
 	top: 0;
